Imported React Sheduler

--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aldabil/react-scheduler": "^2.7.26",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/node": "20.10.1",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
+    "date-fns": "^2.30.0",
+    "emotion": "^11.0.0",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
+    "mui": "^0.0.1",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
