--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "emotion": "^11.0.0",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
+    "mongodb": "^6.3.0",
     "mui": "^0.0.1",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "postcss": "8.4.31",
+    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
