--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aldabil/react-scheduler": "^2.7.26",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.3.1",
     "@types/node": "20.10.1",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
