--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.3.1",
-    "@types/node": "20.10.1",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.7",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "emotion": "^11.0.0",
@@ -24,6 +24,7 @@
     "eslint-config-next": "14.0.3",
     "mongodb": "^6.3.0",
     "mui": "^0.0.1",
+    "mysql2": "^3.9.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "postcss": "8.4.31",
@@ -34,5 +35,8 @@
     "tailwindcss": "3.3.5",
     "typescript": "5.3.2",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.7"
   }
 }
