Create Google signing in

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:22011617@localhost:3306/verve-project"
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=0VzMh3VQHiKJoj7kww7u9vwwvrY1fiEnWKEZ7Ec7JBU=
+GOOGLE_CLIENT_ID=388318772735-vtjpniea2jalqafemuo0jfrkhap5sgqe.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
