--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@aldabil/react-scheduler": "^2.7.26",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "emotion": "^11.0.0",
@@ -37,6 +39,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.7"
   }
 }
